Jean-Philippe Barrette-LaPierre (22 September 2007) version 0.7.1
- Namespace semicolon fix provided by Joerg.
- Added global.h to distribution

Jean-Philippe Barrette-LaPierre (16 January 2007) version 0.7.0
- Added boost.function (http://www.boost.org)  feature.

Jean-Philippe Barrette-LaPierre (13 January 2007) version 0.7.0
- Fixed Functor arguments binding.
- Enabled example 10.
- Added make_functor function (see example10).
- WriteData is now called WriteFile.
- Disabled buggy WriteStream.
- Added example17 (binded method functor).

Jean-Philippe Barrette-LaPierre (13 January 2007) version 0.7.0-pre2
- Changed to version 0.7.0

Armel Asselin (21 November 2006) version 0.7.0-pre2
- Added some missing options (some unavailable CURLOPT)
- Fixed Options for Quote/PreQuote/PostQuote (was long, now is std::list<std::string>).
- Added cURLpp::Easy::reset.
- Fixed wrong cURLpp::Easy::InfoGetter declaration (struct/class mix).
- Added implementation for long and double Info.
- cURLpp::Multi removes the easy handles remaining inside itself when destroyed (allows nice handling of exceptions when a Multi is involved).
- Changed to version 0.7.0

Jean-Philippe Barrette-LaPierre (08 August 2006) version 0.7.0-pre2
- Added example 16
	
Jean-Philippe Barrette-LaPierre (30 June 2006) version 0.7.0-pre2
- Added the NotAvailable feature. If CURLPP_ALLOW_NOT_AVAILABLE is 
  defined, it allow us to compile code not available for the current
  libcURL version.  
- Added the NoValueOptionTrait. This will allow options with no values,
  as CURLOPT_SSLENGINE_DEFAULT, for instance.

Jean-Philippe Barrette-LaPierre (29 June 2006) version 0.7.0-pre1
- Changed to version 0.7.0-pre2

Jean-Philippe Barrette-LaPierre (29 June 2006) version 0.7.0-pre1
- Fixed the missing msvc makefiles in source distribution.
- Fixed some gcc 3.2 compilation fixes (MaHo)

Jean-Philippe Barrette-LaPierre (25 June 2006) version 0.7.0-pre1
- Updated MSVC makefiles for new examples and for Multi integration.