@@ -54,7 +54,19 @@ rm -rf %{buildroot}
 %files devel
 %defattr(-,root,root)
 %attr(0755,root,root) %{_bindir}/curlpp-config
-%attr(0644,root,root) %{_includedir}/curlpp/*
+%dir %{_includedir}/curlpp
+%{_includedir}/curlpp/*.hpp
+%{_includedir}/curlpp/*.inl
+%{_includedir}/curlpp/*.h
+%dir %{_includedir}/curlpp/utilspp
+%dir %{_includedir}/curlpp/utilspp/singleton
+%{_includedir}/curlpp/utilspp/singleton/*.hpp
+%{_includedir}/curlpp/utilspp/singleton/*.inl
+%dir %{_includedir}/utilspp
+%{_includedir}/utilspp/*.hpp
+%{_includedir}/utilspp/*.inl
+%dir %{_includedir}/utilspp/functor
+%{_includedir}/utilspp/functor/*.hpp
 %{_libdir}/libcurlpp.la
 %{_libdir}/libcurlpp.a
 %{_libdir}/pkgconfig/curlpp.pc
@@ -62,6 +74,7 @@ rm -rf %{buildroot}
 
 
 %changelog
+
 * Sun Jul 17 2005 Jean-Philippe Barrette-LaPierre <jpb@rrette.com> - 0.5.1-1
 - removed {%name} use
 
